--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,15 @@
   "main": "index.js",
   "dependencies": {
     "@prisma/client": "^4.5.0",
+    "@types/axios": "^0.14.0",
+    "@types/morgan": "^1.9.4",
+    "axios": "^1.3.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "init": "^0.1.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.22",
     "strip-bom": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
@@ -16,12 +21,15 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
+    "@types/helmet": "^4.0.0",
     "@types/node": "^18.11.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0"
   },
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist"
   },
