--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,4 +1,5 @@
 {
+ 
     "compilerOptions": {
       "target": "es6",
       "module": "commonjs",
@@ -8,5 +9,6 @@
       "moduleResolution": "node",
       "esModuleInterop": true
     },
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules"],
+  "include": ["src/**/*"]
   }
