--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.6",
     "@mui/x-data-grid": "^6.14.0",
+    "@prisma/client": "^5.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.33",
-    "@types/react-dom": "^18.0.11"
+    "@types/react-dom": "^18.0.11",
+    "prisma": "^5.3.1"
   }
 }
