--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.59",
     "axios": "^1.3.5",
+    "express": "^4.18.2",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +23,6 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "strip-bom": "^5.0.0",
-    "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -31,7 +31,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "server": "index.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +55,7 @@
   "devDependencies": {
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
-    "prisma": "^5.3.1"
+    "prisma": "^5.3.1",
+    "typescript": "^5.2.2"
   }
 }
